--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
 
     <title>Number guessing game</title>
 
-    
+    <script src="script.js" defer></script>
   </head>
 
   <body>
-    <script src="js.js"></script>
-a
+    
+
+    <button id="rock">rock</button>
+    <button id="paper" class="paper">paper</button>
+    <button id="scissors" class="scissors">scissors</button>
+
+    <div id="results"></div>
+    <div id="score"></div>
+
 
 </body>
 
